fix: match RW and improve contrast of OCHA services button
Refs: NUM-46

--- a/html/themes/custom/common_design_subtheme/css/styles.css
+++ b/html/themes/custom/common_design_subtheme/css/styles.css
@@ -3,6 +3,13 @@
  */
 
 /**
+ * OCHA Services see-all button
+ */
+.cd-ocha-dropdown__see-all {
+  background: var(--cd-primary-color--lighter);
+}
+
+/**
  * Provide separators between each Paragraph on ANY Paragraphs field.
  */
 .field--name-field-paragraphs > .field__item + .field__item {
